# hypermodern_python

./: pyproject.toml
src/hypermodern_python/: __init__.py  console.py
tests/: test_console.py
