[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The modern Python project"
authors = ["Mustafa Hasanbulli <mustafa.hasanbulli@xero.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.dev.xero.com/mustafa-hasanbulli/hypermodern-python"
repository = "https://github.dev.xero.com/mustafa-hasanbulli/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"
