[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The modern Python project"
authors = ["Mustafa Hasanbulli <mustafa.hasanbulli@xero.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mhasanbulli/hypermodern_python"
repository = "https://github.com/mhasanbulli/hypermodern_python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = {version = "^6.3.2", extras = ["toml"]}
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"
